--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     </header>
     <main id="main">
       <form id="list-add">
-        <input type="text" id="user-input" />
+        <input type="text" name="user-input" id="user-input" />
         <input type="submit" value="Add" class="buttons" />
       </form>
+      <div id="list"></div>
     </main>
   </body>
 </html>
