--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Reciplist</h1>
       <div>
-        <button id="recipies-button" class="buttons">Recipies</button>
+        <button id="recipies-button" class="buttons">Recipes</button>
         <button id="shopping-list-button" class="buttons">Shopping List</button>
       </div>
     </header>
