--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
       <h1>Reciplist</h1>
       <div>
-        <button id="recipies-button" class="buttons">Recipes</button>
         <button id="shopping-list-button" class="buttons">Shopping List</button>
+        <button id="recipes-button" class="buttons">Recipes</button>
       </div>
     </header>
     <main id="main">
       <form id="list-add">
         <input type="text" name="user-input" id="user-input" />
-        <input type="submit" value="Add" class="buttons" />
+        <input type="submit" value="+" id="add-button" class="buttons" />
       </form>
       <div id="list"></div>
     </main>
