--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <!-- Recipe page -->
       <div id="recipe-page">
-        <h2 id="recipe-name">Spaghetti Supreme</h2>
+        <h2 id="recipe-name"></h2>
         <div id="recipe-ingredients">
           <h3>Ingredients</h3>
           <div id="ingredient-list"></div>
@@ -63,6 +63,7 @@
           </form>
         </div>
         <div id="recipe-instructions">
+          <h3>Instructions</h3>
           <p></p>
         </div>
       </div>
