fixes and progress

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
         <div id="recipe-instructions">
           <h3>Instructions</h3>
           <form id="instructions-area">
-            <input
-              type="text"
+            <textarea
               name="instructions-input"
               id="instructions-input"
               placeholder="Enter instructions here"
-            />
+            ></textarea>
             <input type="submit" value="Save" id="instructions-save-button" />
           </form>
         </div>
