fixes and progress

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       </div>
       <!-- Recipe page -->
       <div id="recipe-page">
-        <h2 id="recipe-name"></h2>
+        <div id="name-and-delete-button">
+          <h2 id="recipe-name"></h2>
+          <button id="delete-button">Delete</button>
+        </div>
         <div id="recipe-ingredients">
           <h3>Ingredients</h3>
           <div id="ingredient-list"></div>
@@ -85,8 +88,9 @@
           </form>
         </div>
       </div>
-      <button id="console-log-shopping-list-array">Shopping list array</button>
-      <button id="console-log-recipe-list-array">Recipe list array</button>
+      <!-- Array checker buttons -->
+      <!-- <button id="console-log-shopping-list-array">Shopping list array</button>
+      <button id="console-log-recipe-list-array">Recipe list array</button> -->
     </main>
   </body>
 </html>
