--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <title>Recipe Shopper</title>
   </head>
   <body>
     <container>
       <header>
-        <h1>Reciplist</h1>
+        <h1>Recipe Shopper</h1>
         <div>
           <button id="shopping-list-button" class="buttons">
             Shopping List
