Added check to prevent empty entries from being added. Tweaks

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               type="text"
               name="shopping-list-input"
               id="shopping-list-input"
-              placeholder="Add to shopping list"
+              placeholder="Add to shopping list..."
             />
             <input
               type="submit"
@@ -48,7 +48,7 @@
               type="text"
               name="recipe-list-input"
               id="recipe-list-input"
-              placeholder="Add recipe"
+              placeholder="Add recipe..."
             />
             <input
               type="submit"
@@ -75,7 +75,7 @@
                 type="text"
                 name="ingredient-input"
                 id="ingredient-input"
-                placeholder="Add ingredient"
+                placeholder="Add ingredient..."
               />
               <input
                 type="submit"
@@ -98,8 +98,10 @@
           </div>
         </div>
         <!-- Array checker buttons -->
-        <!-- <button id="console-log-shopping-list-array">Shopping list array</button>
-      <button id="console-log-recipe-list-array">Recipe list array</button> -->
+        <button id="console-log-shopping-list-array">
+          Shopping list array
+        </button>
+        <button id="console-log-recipe-list-array">Recipe list array</button>
       </main>
     </container>
   </body>
