Various improvements and tweaks

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <header>
         <h1>Recipe Shopper</h1>
         <div>
-          <button id="shopping-list-button" class="buttons">
+          <button id="shopping-list-button" class="header-button">
             Shopping List
           </button>
-          <button id="recipes-button" class="buttons">Recipes</button>
+          <button id="recipes-button" class="header-button">Recipes</button>
         </div>
       </header>
       <main id="main">
@@ -35,7 +35,7 @@
               type="submit"
               value="+"
               id="add-shopping-list-button"
-              class="buttons"
+              class="buttons add-button"
             />
           </form>
           <hr />
@@ -54,7 +54,7 @@
               type="submit"
               value="+"
               id="recipe-list-add-button"
-              class="buttons"
+              class="buttons add-button"
             />
           </form>
           <hr />
@@ -64,7 +64,7 @@
         <div id="recipe-page">
           <div id="name-and-delete-button">
             <h2 id="recipe-name"></h2>
-            <button id="delete-button">Delete</button>
+            <button id="delete-button" class="delete-button">Delete</button>
           </div>
           <hr />
           <div id="recipe-ingredients">
@@ -81,7 +81,7 @@
                 type="submit"
                 value="+"
                 id="ingredient-add-button"
-                class="buttons"
+                class="buttons add-button"
               />
             </form>
           </div>
