--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
           </div>
         </div>
         <!-- Array checker buttons -->
-        <button id="console-log-shopping-list-array">
+        <!-- <button id="console-log-shopping-list-array">
           Shopping list array
         </button>
-        <button id="console-log-recipe-list-array">Recipe list array</button>
+        <button id="console-log-recipe-list-array">Recipe list array</button> -->
       </main>
     </container>
   </body>
